@@ -35,14 +35,13 @@ import org.elasticsearch.search.fetch.subphase.FetchSourceContext;
 import org.elasticsearch.search.internal.SearchContext;
 import org.elasticsearch.search.sort.SortOrder;
 import org.elasticsearch.search.suggest.SuggestBuilder;
-import org.elasticsearch.search.suggest.term.TermSuggestionBuilder.SuggestMode;
+import org.elasticsearch.search.suggest.term.TermSuggestionBuilder;
 import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.IntConsumer;
@@ -56,7 +55,7 @@ import static org.elasticsearch.search.suggest.SuggestBuilders.termSuggestion;
 
 public class RestSearchAction extends BaseRestHandler {
     private static final DeprecationLogger deprecationLogger = DeprecationLogger.getLogger(RestSearchAction.class);
-    public static final String TYPES_DEPRECATION_MESSAGE = "[types removal]" + " Specifying types in search requests is deprecated.";
+    public static final String TYPES_DEPRECATION_MESSAGE = "[types removal] Specifying types in search requests is deprecated.";
 
     /**
      * Indicates whether hits.total should be rendered as an integer or an object
@@ -64,12 +63,7 @@ public class RestSearchAction extends BaseRestHandler {
      */
     public static final String TOTAL_HITS_AS_INT_PARAM = "rest_total_hits_as_int";
     public static final String TYPED_KEYS_PARAM = "typed_keys";
-    public static final Set<String> RESPONSE_PARAMS;
-
-    static {
-        final Set<String> responseParams = new HashSet<>(Arrays.asList(TYPED_KEYS_PARAM, TOTAL_HITS_AS_INT_PARAM));
-        RESPONSE_PARAMS = Collections.unmodifiableSet(responseParams);
-    }
+    public static final Set<String> RESPONSE_PARAMS = Set.of(TYPED_KEYS_PARAM, TOTAL_HITS_AS_INT_PARAM);
 
     @Override
     public String getName() {
@@ -198,7 +192,7 @@ public class RestSearchAction extends BaseRestHandler {
         searchRequest.preference(request.param("preference"));
         searchRequest.indicesOptions(IndicesOptions.fromRequest(request, searchRequest.indicesOptions()));
 
-        checkRestTotalHits(request, searchRequest);
+        validateSearchRequest(request, searchRequest);
 
         if (searchRequest.pointInTimeBuilder() != null) {
             preparePointInTime(searchRequest, request, namedWriteableRegistry);
@@ -206,6 +200,9 @@ public class RestSearchAction extends BaseRestHandler {
             searchRequest.setCcsMinimizeRoundtrips(
                 request.paramAsBoolean("ccs_minimize_roundtrips", searchRequest.isCcsMinimizeRoundtrips())
             );
+        }
+        if (request.paramAsBoolean("force_synthetic_source", false)) {
+            searchRequest.setForceSyntheticSource(true);
         }
 
         extraParamParser.accept(request, searchRequest);
@@ -313,19 +310,44 @@ public class RestSearchAction extends BaseRestHandler {
         if (sStats != null) {
             searchSourceBuilder.stats(Arrays.asList(Strings.splitStringByCommaToArray(sStats)));
         }
+        SuggestBuilder suggestBuilder = parseSuggestUrlParameters(request);
+        if (suggestBuilder != null) {
+            searchSourceBuilder.suggest(suggestBuilder);
+        }
+    }
 
+    private static final String[] suggestQueryStringParams = new String[] { "suggest_text", "suggest_size", "suggest_mode" };
+
+    /**
+     * package private for testing
+     */
+    static SuggestBuilder parseSuggestUrlParameters(RestRequest request) {
         String suggestField = request.param("suggest_field");
         if (suggestField != null) {
             String suggestText = request.param("suggest_text", request.param("q"));
             int suggestSize = request.paramAsInt("suggest_size", 5);
             String suggestMode = request.param("suggest_mode");
-            searchSourceBuilder.suggest(
-                new SuggestBuilder().addSuggestion(
-                    suggestField,
-                    termSuggestion(suggestField).text(suggestText).size(suggestSize).suggestMode(SuggestMode.resolve(suggestMode))
-                )
+            return new SuggestBuilder().addSuggestion(
+                suggestField,
+                termSuggestion(suggestField).text(suggestText)
+                    .size(suggestSize)
+                    .suggestMode(TermSuggestionBuilder.SuggestMode.resolve(suggestMode))
             );
+        } else {
+            List<String> unconsumedParams = Arrays.stream(suggestQueryStringParams).filter(key -> request.param(key) != null).toList();
+            if (unconsumedParams.isEmpty() == false) {
+                // this would lead to a non-descriptive error from RestBaseHandler#unrecognized later, so throw a better IAE here
+                throw new IllegalArgumentException(
+                    String.format(
+                        Locale.ROOT,
+                        "request [%s] contains parameters %s but missing 'suggest_field' parameter.",
+                        request.path(),
+                        unconsumedParams.toString()
+                    )
+                );
+            }
         }
+        return null;
     }
 
     static void preparePointInTime(SearchRequest request, RestRequest restRequest, NamedWriteableRegistry namedWriteableRegistry) {
@@ -333,7 +355,7 @@ public class RestSearchAction extends BaseRestHandler {
         ActionRequestValidationException validationException = null;
         if (request.indices().length > 0) {
             validationException = addValidationError(
-                "[indices] cannot be used with point in time. Do " + "not specify any index with point in time.",
+                "[indices] cannot be used with point in time. Do not specify any index with point in time.",
                 validationException
             );
         }
@@ -369,6 +391,15 @@ public class RestSearchAction extends BaseRestHandler {
     }
 
     /**
+     * Validates that no search request parameters conflict. This method
+     * might modify the search request to align certain parameters.
+     */
+    public static void validateSearchRequest(RestRequest restRequest, SearchRequest searchRequest) {
+        checkRestTotalHits(restRequest, searchRequest);
+        checkSearchType(restRequest, searchRequest);
+    }
+
+    /**
      * Modify the search request to accurately count the total hits that match the query
      * if {@link #TOTAL_HITS_AS_INT_PARAM} is set.
      *
@@ -376,7 +407,7 @@ public class RestSearchAction extends BaseRestHandler {
      * is used in conjunction with a lower bound value (other than {@link SearchContext#DEFAULT_TRACK_TOTAL_HITS_UP_TO})
      * for the track_total_hits option.
      */
-    public static void checkRestTotalHits(RestRequest restRequest, SearchRequest searchRequest) {
+    private static void checkRestTotalHits(RestRequest restRequest, SearchRequest searchRequest) {
         boolean totalHitsAsInt = restRequest.paramAsBoolean(TOTAL_HITS_AS_INT_PARAM, false);
         if (totalHitsAsInt == false) {
             return;
@@ -397,6 +428,14 @@ public class RestSearchAction extends BaseRestHandler {
                         + trackTotalHitsUpTo
                 );
             }
+    }
+
+    private static void checkSearchType(RestRequest restRequest, SearchRequest searchRequest) {
+        if (restRequest.hasParam("search_type") && searchRequest.hasKnnSearch()) {
+            throw new IllegalArgumentException(
+                "cannot set [search_type] when using [knn] search, since the search type is determined automatically"
+            );
+        }
     }
 
     @Override
