@@ -9,12 +9,10 @@ package org.elasticsearch.xpack.watcher.rest.action;
 
 import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.lucene.uid.Versions;
-import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.protocol.xpack.watcher.PutWatchRequest;
 import org.elasticsearch.protocol.xpack.watcher.PutWatchResponse;
 import org.elasticsearch.rest.BaseRestHandler;
-import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.rest.RestResponse;
@@ -23,7 +21,6 @@ import org.elasticsearch.rest.action.RestBuilderListener;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.watcher.transport.actions.put.PutWatchAction;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -59,18 +56,16 @@ public class RestPutWatchAction extends BaseRestHandler implements RestRequestFi
             public RestResponse buildResponse(PutWatchResponse response, XContentBuilder builder) throws Exception {
                 response.toXContent(builder, request);
                 RestStatus status = response.isCreated() ? CREATED : OK;
-                return new BytesRestResponse(status, builder);
+                return new RestResponse(status, builder);
             }
         });
     }
 
-    private static final Set<String> FILTERED_FIELDS = Collections.unmodifiableSet(
-        Sets.newHashSet(
-            "input.http.request.auth.basic.password",
-            "input.chain.inputs.*.http.request.auth.basic.password",
-            "actions.*.email.attachments.*.reporting.auth.basic.password",
-            "actions.*.webhook.auth.basic.password"
-        )
+    private static final Set<String> FILTERED_FIELDS = Set.of(
+        "input.http.request.auth.basic.password",
+        "input.chain.inputs.*.http.request.auth.basic.password",
+        "actions.*.email.attachments.*.reporting.auth.basic.password",
+        "actions.*.webhook.auth.basic.password"
     );
 
     @Override
